# cpp_craft_0314

solutions/alexei_romanoff/1/sources/week1_islands/: islands.cpp
solutions/alexei_romanoff/1/sources/week1_rational_numbers/: rational_numbers.cpp
solutions/alexei_romanoff/1/sources/week1_reverse_strings/: reverse_strings.cpp
solutions/alexei_romanoff/2/: CMakeLists.txt  _clang_gen.sh  _gcc_gen.sh
solutions/alexei_romanoff/2/sources/2_4/: trades_filter.cpp
solutions/alexei_romanoff/2/sources/2_5/: small_buffer.cpp
solutions/alexei_romanoff/2/sources/2_6/: binary_datafeed.cpp
solutions/alexei_romanoff/2/tests/input_data/2.5/: input.txt
solutions/alexei_romanoff/3/: CMakeLists.txt  _clang_gen.sh  _gcc_gen.sh
solutions/alexei_romanoff/3/sources/3_4/: trades_filter.cpp
solutions/alexei_romanoff/3/tests/: gen_input_files.py
solutions/alexei_romanoff/3/tests/input_data/2.5/: input2.txt  input_etalon.txt
solutions/alexei_romanoff/4/: CMakeLists.txt  _clang_gen.sh  _gcc_gen.sh
solutions/alexei_romanoff/4/sources/4_4/: a_message.cpp  b_message.cpp  b_message.h
solutions/alexei_romanoff/4/sources/4_5/: solution.cpp  solution.h
